--- a/index.html
+++ b/index.html
@@ -1,27 +1,65 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="app.css" />
+  </head>
 
-<head></head>
-
-<body>
-  <div id="amondo-container"></div>
-  <script>
-    function amondo_init() {
-      var container = document.querySelector('#amondo-container');
+  <body>
+    <div id="amondo-container"></div>
+    <script>
+      function amondo_init() {
+        var container = document.querySelector("#amondo-container");
+        amondo.imprint.create(container, {
+          mode: "gallery",
+          id: ["27796", "27771", "27769", "27767", "21777"],
+          layout: {
+            galleryType: "covers",
+          },
+          theme: {
+            accentColour: "#ECEDEE",
+            background: "transparent",
+            foreground: "#ffffff",
+          },
+        });
+      }
+    </script>
+    <script
+      async
+      defer
+      src="https://static.amondo.com/web-sdk/3/amondo-web-sdk.js"
+      onload="amondo_init()"
+    ></script>
+    <!-- <script src="https://static.amondo.com/web-sdk/2/amondo-web-sdk.js"></script>
+    <script>
+      var container = document.querySelector("#amondo-container");
       amondo.imprint.create(container, {
-        "mode": "gallery",
-        "id": ["21777","21640"],
-        "layout": {
-          "galleryType": "circles"
+        id: 21777,
+        mode: "gallery",
+        layout: {
+          galleryType: "circles",
         },
-        "theme": {
-          "accentColour": "#ECEDEE",
-          "background": "transparent",
-          "foreground": "#ffffff"
-        }
+        theme: {
+          accentColour: "#ECEDEE",
+          background: "transparent",
+          foreground: "#ffffff",
+        },
       });
-    }
-  </script>
-  <script async defer src="https://static.amondo.com/web-sdk/3/amondo-web-sdk.js" onload="amondo_init()"></script>
-</body>
-
+    </script> -->
+  </body>
 </html>
+
+<!-- <script src="https://static.amondo.com/web-sdk/2/amondo-web-sdk.js"></script>
+    <script>
+      var container = document.querySelector("#amondo-example");
+      amondo.imprint.create(container, {
+        id: [21777, 21640],
+        mode: "gallery",
+        layout: {
+          galleryType: "circles",
+        },
+        theme: {
+          accentColour: "#ECEDEE",
+          background: "transparent",
+          foreground: "#ffffff",
+        },
+      });
+    </script> -->
